@@ -35,6 +35,9 @@ test {
 tasks.withType(JavaCompile) {
 	options.compilerArgs += '--enable-preview'
 }
+tasks.withType(JavaExec) {
+	jvmArgs += '--enable-preview'
+}
 tasks.withType(Test) {
 	jvmArgs += "--enable-preview"
 }
